--- a/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
+++ b/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
@@ -533,78 +533,81 @@
             <objects>
                 <viewController id="vSX-Hs-Sww" customClass="RingkasanWacanaViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UsN-Yr-F6A">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Tampan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rcp-gw-ok2">
-                                <rect key="frame" x="16" y="84" width="288" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ykg-At-wFf">
-                                <rect key="frame" x="16" y="114.5" width="288" height="203"/>
-                                <string key="text">Maecenas non mauris non lectus bibendum volutpat non ut eros. Vivamus vehicula erat volutpat facilisis varius. Curabitur sagittis sodales est, et euismod tortor ultricies vel. Nullam in massa erat. Maecenas diam massa, sollicitudin ut finibus in, suscipit sed urna. Proin nunc ligula, tempor vel magna vel, tincidunt porttitor quam. </string>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UE3-mR-EZm">
-                                <rect key="frame" x="16" y="325.5" width="288" height="64.5"/>
-                                <string key="text">Vivamus vehicula erat volutpat facilisis varius. Curabitur sagittis sodales est, et euismod tortor ultricies vel. Nullam in massa erat. Maecenas diam massa, sollicitudin ut finibus in, suscipit sed urna. Proin nunc ligula, tempor vel magna vel, tincidunt porttitor quam. </string>
+                                <rect key="frame" x="16" y="20" width="288" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pvQ-kK-SLJ">
-                                <rect key="frame" x="16" y="400" width="288" height="30"/>
+                                <rect key="frame" x="16" y="336" width="288" height="30"/>
                                 <state key="normal" title="Buka link"/>
                                 <connections>
                                     <action selector="bukaSumber" destination="vSX-Hs-Sww" eventType="touchUpInside" id="px8-9f-lfU"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wgh-uE-tZj">
-                                <rect key="frame" x="16" y="440" width="288" height="30"/>
+                                <rect key="frame" x="16" y="376" width="288" height="30"/>
                                 <state key="normal" title="Lihat Materi"/>
                                 <connections>
                                     <action selector="lihatMateri" destination="vSX-Hs-Sww" eventType="touchUpInside" id="uCT-ZY-b0J"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="halo" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="bku-Pp-amw">
+                                <rect key="frame" x="16" y="60.5" width="288" height="124"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="hula" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="tfJ-xn-rO1">
+                                <rect key="frame" x="16" y="192.5" width="288" height="123.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="hFo-P7-6xF" firstAttribute="trailing" secondItem="tfJ-xn-rO1" secondAttribute="trailing" constant="16" id="0ez-dU-gMZ"/>
                             <constraint firstItem="hFo-P7-6xF" firstAttribute="bottom" secondItem="wgh-uE-tZj" secondAttribute="bottom" constant="10" id="1wj-Sp-sVe"/>
-                            <constraint firstItem="hFo-P7-6xF" firstAttribute="trailing" secondItem="UE3-mR-EZm" secondAttribute="trailing" constant="16" id="2LP-KF-DLH"/>
-                            <constraint firstItem="pvQ-kK-SLJ" firstAttribute="top" secondItem="UE3-mR-EZm" secondAttribute="bottom" constant="10" id="7Qn-ft-WHS"/>
-                            <constraint firstItem="hFo-P7-6xF" firstAttribute="trailing" secondItem="ykg-At-wFf" secondAttribute="trailing" constant="16" id="9gk-RB-PER"/>
                             <constraint firstItem="pvQ-kK-SLJ" firstAttribute="leading" secondItem="hFo-P7-6xF" secondAttribute="leading" constant="16" id="A9X-5t-4nT"/>
                             <constraint firstItem="hFo-P7-6xF" firstAttribute="trailing" secondItem="wgh-uE-tZj" secondAttribute="trailing" constant="16" id="ELo-8I-VYM"/>
                             <constraint firstItem="Rcp-gw-ok2" firstAttribute="leading" secondItem="hFo-P7-6xF" secondAttribute="leading" constant="16" id="EQf-oi-lc4"/>
-                            <constraint firstItem="UE3-mR-EZm" firstAttribute="top" secondItem="ykg-At-wFf" secondAttribute="bottom" constant="8" id="KEz-7H-0su"/>
                             <constraint firstItem="wgh-uE-tZj" firstAttribute="top" secondItem="pvQ-kK-SLJ" secondAttribute="bottom" constant="10" id="TDa-HX-Egh"/>
-                            <constraint firstItem="UE3-mR-EZm" firstAttribute="leading" secondItem="hFo-P7-6xF" secondAttribute="leading" constant="16" id="e4N-d6-o8E"/>
+                            <constraint firstItem="tfJ-xn-rO1" firstAttribute="top" secondItem="bku-Pp-amw" secondAttribute="bottom" constant="8" id="WC3-wQ-F5b"/>
+                            <constraint firstItem="hFo-P7-6xF" firstAttribute="trailing" secondItem="bku-Pp-amw" secondAttribute="trailing" constant="16" id="dvQ-ha-yDc"/>
+                            <constraint firstItem="tfJ-xn-rO1" firstAttribute="leading" secondItem="hFo-P7-6xF" secondAttribute="leading" constant="16" id="fgA-nf-HmJ"/>
+                            <constraint firstItem="bku-Pp-amw" firstAttribute="height" secondItem="tfJ-xn-rO1" secondAttribute="height" id="gJx-AW-PpL"/>
                             <constraint firstItem="Rcp-gw-ok2" firstAttribute="top" secondItem="hFo-P7-6xF" secondAttribute="top" constant="20" id="gkP-4U-BZD"/>
-                            <constraint firstItem="ykg-At-wFf" firstAttribute="top" secondItem="Rcp-gw-ok2" secondAttribute="bottom" constant="10" id="hDi-PK-7cs"/>
+                            <constraint firstItem="bku-Pp-amw" firstAttribute="top" secondItem="Rcp-gw-ok2" secondAttribute="bottom" constant="20" id="hho-zb-5K0"/>
                             <constraint firstItem="hFo-P7-6xF" firstAttribute="trailing" secondItem="pvQ-kK-SLJ" secondAttribute="trailing" constant="16" id="hhx-zs-i9I"/>
                             <constraint firstItem="wgh-uE-tZj" firstAttribute="leading" secondItem="hFo-P7-6xF" secondAttribute="leading" constant="16" id="jCy-8I-NHQ"/>
+                            <constraint firstItem="pvQ-kK-SLJ" firstAttribute="top" secondItem="tfJ-xn-rO1" secondAttribute="bottom" constant="20" id="qMb-Q7-TnZ"/>
                             <constraint firstItem="hFo-P7-6xF" firstAttribute="trailing" secondItem="Rcp-gw-ok2" secondAttribute="trailing" constant="16" id="vYA-N5-Brc"/>
-                            <constraint firstItem="ykg-At-wFf" firstAttribute="leading" secondItem="hFo-P7-6xF" secondAttribute="leading" constant="16" id="zzJ-WL-mFc"/>
+                            <constraint firstItem="bku-Pp-amw" firstAttribute="leading" secondItem="hFo-P7-6xF" secondAttribute="leading" constant="16" id="xmC-ln-dbd"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hFo-P7-6xF"/>
                     </view>
                     <navigationItem key="navigationItem" id="r9a-fw-yB3">
-                        <barButtonItem key="rightBarButtonItem" title="Selesai" id="wol-bU-52f"/>
+                        <barButtonItem key="rightBarButtonItem" title="Selesai" id="wol-bU-52f">
+                            <connections>
+                                <action selector="selesai" destination="vSX-Hs-Sww" id="DLb-dW-Cvh"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="deskripsiLabel" destination="ykg-At-wFf" id="8YS-eT-gfK"/>
+                        <outlet property="deskripsiTextView" destination="bku-Pp-amw" id="rVG-RG-NZj"/>
                         <outlet property="judulLabel" destination="Rcp-gw-ok2" id="SkJ-js-kZk"/>
-                        <outlet property="ringkasanLabel" destination="UE3-mR-EZm" id="d8o-cf-B8i"/>
+                        <outlet property="ringkasanTextView" destination="tfJ-xn-rO1" id="jVC-VQ-OK9"/>
                         <outlet property="sumberButton" destination="pvQ-kK-SLJ" id="Q5h-zJ-G4y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9PG-e8-5t3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2989" y="3044"/>
+            <point key="canvasLocation" x="2988.75" y="3043.75"/>
         </scene>
         <!--Tambah Tips-->
         <scene sceneID="lvA-9t-Xju">
@@ -1841,7 +1844,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ICX-mQ-GMG" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LVv-PY-xbv">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="LVv-PY-xbv">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
