--- a/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
+++ b/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
@@ -18,6 +18,60 @@
         </array>
     </customFonts>
     <scenes>
+        <!--Buat Akun-->
+        <scene sceneID="3up-fJ-ajc">
+            <objects>
+                <viewController id="BpK-e4-5QT" customClass="SignUpViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="m3l-Yk-yuE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXA-Ae-DfF">
+                                <rect key="frame" x="125" y="281" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Buat Akun"/>
+                                <connections>
+                                    <action selector="signUp" destination="BpK-e4-5QT" eventType="touchUpInside" id="8rJ-p3-u2e"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qds-Xc-HhJ">
+                                <rect key="frame" x="45" y="243" width="236" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kDY-XW-O7n">
+                                <rect key="frame" x="45" y="205" width="236" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nama" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wZp-Kp-4Tc">
+                                <rect key="frame" x="45" y="167" width="236" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="HqP-zN-VHl"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Buat Akun" id="7Jr-OM-wju">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="fLx-Mg-Bta"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="displayNameTextField" destination="wZp-Kp-4Tc" id="Cst-xC-mx0"/>
+                        <outlet property="passwordTextField" destination="qds-Xc-HhJ" id="1co-Dw-cij"/>
+                        <outlet property="usernameTextField" destination="kDY-XW-O7n" id="3Ha-hk-lGv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d81-gL-x4w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-446.25" y="937.5"/>
+        </scene>
         <!--LOGIN-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -26,25 +80,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wiP-fd-ywN">
-                                <rect key="frame" x="137" y="368" width="46" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gza-z1-7II">
+                                <rect key="frame" x="53" y="237" width="221" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KLd-oq-duD">
+                                <rect key="frame" x="53" y="275" width="221" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Yr-sM-xPr">
+                                <rect key="frame" x="142" y="351" width="43" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Daftar"/>
+                                <connections>
+                                    <segue destination="nlr-cY-cwy" kind="presentation" id="AG7-nd-upF"/>
+                                </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gza-z1-7II">
-                                <rect key="frame" x="112" y="253" width="97" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wiP-fd-ywN">
+                                <rect key="frame" x="138" y="313" width="45" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KLd-oq-duD">
-                                <rect key="frame" x="112" y="330" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                                <state key="normal" title="Masuk"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -61,7 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-369" y="285"/>
+            <point key="canvasLocation" x="28.125" y="285"/>
         </scene>
         <!--INFO-->
         <scene sceneID="oHi-cl-iR5">
@@ -458,7 +520,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EkL-y6-Yej" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-174.375" y="1575"/>
+            <point key="canvasLocation" x="223.125" y="1575"/>
         </scene>
         <!--TIPS-->
         <scene sceneID="QhN-SF-DJi">
@@ -526,7 +588,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Mv-nE-poy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2988.75" y="1575"/>
+            <point key="canvasLocation" x="3386.25" y="1575"/>
         </scene>
         <!--Ringkasan Wacana View Controller-->
         <scene sceneID="sZS-VU-6im">
@@ -901,7 +963,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rZ7-a7-ag2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="548" y="285"/>
+            <point key="canvasLocation" x="945" y="285"/>
         </scene>
         <!--Main Tab Bar Controller-->
         <scene sceneID="O63-Bc-1N1">
@@ -923,7 +985,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fjI-nZ-XWa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1436" y="285"/>
+            <point key="canvasLocation" x="1831.875" y="285"/>
         </scene>
         <!--Profil Paslon-->
         <scene sceneID="2uA-NB-YJl">
@@ -1687,7 +1749,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sWy-w9-A45" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1920" y="1575"/>
+            <point key="canvasLocation" x="2317.5" y="1575"/>
         </scene>
         <!--POST-->
         <scene sceneID="4ga-qd-etW">
@@ -1746,7 +1808,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h2K-9w-Y0S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="834" y="1575"/>
+            <point key="canvasLocation" x="1230" y="1575"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="W8g-M4-7Fc">
@@ -1837,7 +1899,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CMD-24-T05" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3935.625" y="1575"/>
+            <point key="canvasLocation" x="4333.125" y="1575"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ben-Yv-1Q9">
@@ -1856,6 +1918,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qj4-cB-dqi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2988.75" y="2297.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="65v-aK-9ZH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nlr-cY-cwy" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f9m-gK-az7">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BpK-e4-5QT" kind="relationship" relationship="rootViewController" id="DxV-Bk-cLR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ehT-Ra-5AD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1080" y="937.5"/>
         </scene>
     </scenes>
     <resources>
